# trafikverket-booking-assistant

./: LICENSE  README.md  ag2_archive.py  api_test.py  brower_prompt  browser_use_idea  browser_use_test.py  chatbot.py  chatbot_test.py  conversable_agent.py  env.example  index.html  license_type  locations  main.py  pyproject.toml  qr_test.py  replay.py  requirements.txt  sample.py  st-frontend.py  steps summary  todo.md  trafik.drawio  user_input_template
.cursor/rules/: python.mdc
app/: main.py
app/api/: browser.py  chat.py  chat_api.py
app/constants/: license_types.py  locations.py  messages.py
app/models/: browser.py  chat.py  data_models.py
app/services/: browser_service.py  chatbot.py  chatbot_service.py  validation_constants.py
browser-use-sample/: controller_actionresult.py  find_influencer_profile.py
test/: browser_iterator_test.py  browser_use_test.py  selector_test.py
