[project]
name = "trafikverket"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ag2>=0.8.4",
    "browser-use>=0.1.40",
    "fastapi>=0.115.12",
    "flask>=3.1.0",
    "langchain>=0.3.22",
    "nest-asyncio>=1.6.0",
    "pillow>=11.1.0",
    "pydantic>=2.11.0",
    "requests>=2.32.3",
    "streamlit>=1.44.0",
    "uvicorn>=0.34.0",
]
