[project]
name = "trafikverket-booking-assistant"
version = "0.1.0"
description = "AI-powered automation tool for booking Swedish driving license tests through Trafikverket's official website"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "browser-use>=0.1.40",
    "fastapi>=0.115.12",
    "langchain>=0.3.22",
    "pydantic>=2.11.0",
    "requests>=2.32.3",
    "streamlit>=1.44.0",
    "uvicorn>=0.34.0",
    "watchdog>=6.0.0",
]
